--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,20 +1,25 @@
 .App {
   text-align: center;
 }
+
 h1 {
   color: gray;
 }
+
 h2 {
-  font-size: .8em;
+  font-size: 1.2em;
 }
+
 .PropName {
   font-weight: bold;
   color: #6264A7;
 }
+
 .Logo {
   font-size: 45pt;
   color: #6264A7;
 }
+
 .Error {
   color: red;
 }
