--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,18 +4,20 @@
 
 html {
   padding: 10px;
+  font-size: 14px;
 }
 
 h1 {
   color: gray;
+  font-size: 1.8rem;
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 1.4rem;
 }
 
 h3 {
-  font-size: 1.1em;
+  font-size: 1.2rem;
 }
 
 .PropName {
